none error fixed; review fixes

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4358,87 +4358,87 @@ séns                möguleiki_kk tækifæri_hk
 # !!! the form given here.
 
 á faraldsferli             		$error(WRONG_WORD, á faraldsfæti)
-af eigin frumkvæði          	$error(AÐAF, að eigin frumkvæði)
-af fyrra bragði             	$error(AÐAF, að fyrra bragði)
-af gefnu tilefni            	$error(AÐAF, að gefnu tilefni)
-af hjartans list				$error(YI, af hjartans lyst)
-af einhverju leyti          	$error(AÐAF, að einhverju leyti)
-af engu leyti              		$error(AÐAF, að engu leyti)
-af mestu leyti              	$error(AÐAF, að mestu leyti)
-af mörgu leyti              	$error(AÐAF, að mörgu leyti)
-af miklu leyti              	$error(AÐAF, að miklu leyti)
-af neinu leyti              	$error(AÐAF, að neinu leyti)
-af þessu leyti              	$error(AÐAF, að þessu leyti)
-af því leyti              		$error(AÐAF, að því leyti)
-af verulegu leyti              	$error(AÐAF, að verulegu leyti)
-af talsverðu leyti             	$error(AÐAF, að talsverðu leyti)
-af öllu leyti               	$error(AÐAF, að öllu leyti)
-af verðleikum               	$error(AÐAF, að verðleikum)
-af yfirlögðu ráði           	$error(AÐAF, að yfirlögðu ráði)
-af ástæðulausu              	$error(AÐAF, að ástæðulausu)
+af eigin frumkvæði          	$error(AFAÐ, að eigin frumkvæði)
+af fyrra bragði             	$error(AFAÐ, að fyrra bragði)
+af gefnu tilefni            	$error(AFAÐ, að gefnu tilefni)
+af hjartans list				$error(IY, af hjartans lyst)
+af einhverju leyti          	$error(AFAÐ, að einhverju leyti)
+af engu leyti              		$error(AFAÐ, að engu leyti)
+af mestu leyti              	$error(AFAÐ, að mestu leyti)
+af mörgu leyti              	$error(AFAÐ, að mörgu leyti)
+af miklu leyti              	$error(AFAÐ, að miklu leyti)
+af neinu leyti              	$error(AFAÐ, að neinu leyti)
+af þessu leyti              	$error(AFAÐ, að þessu leyti)
+af því leyti              		$error(AFAÐ, að því leyti)
+af verulegu leyti              	$error(AFAÐ, að verulegu leyti)
+af talsverðu leyti             	$error(AFAÐ, að talsverðu leyti)
+af öllu leyti               	$error(AFAÐ, að öllu leyti)
+af verðleikum               	$error(AFAÐ, að verðleikum)
+af yfirlögðu ráði           	$error(AFAÐ, að yfirlögðu ráði)
+af ástæðulausu              	$error(AFAÐ, að ástæðulausu)
 að sjálfdáðum              		$error(WRONG_WORD, af sjálfsdáðum)
-alla sýna lífdaga				$error(YI, alla sína lífdaga)
-alla sýna ævi					$error(YI, alla sína ævi)
-allt kvað af tekur				$error(KHV, allt hvað af tekur)
-allt kvað fætur toga			$error(KHV, allt hvað fætur toga)
-að einu leitinu					$error(YI, að einu leytinu)
+alla sýna lífdaga				$error(YYII, alla sína lífdaga)
+alla sýna ævi					$error(YYII, alla sína ævi)
+allt kvað af tekur				$error(KVHV, allt hvað af tekur)
+allt kvað fætur toga			$error(KVHV, allt hvað fætur toga)
+að einu leitinu					$error(IY, að einu leytinu)
 að fremsta megni            	$error(AÐAF, af fremsta megni)
-að fullu leiti					$error(YI, að fullu leyti)
+að fullu leiti					$error(IY, að fullu leyti)
 að fúsum og frjálsum vilja  	$error(AÐAF, af fúsum og frjálsum vilja)
 að gefnu tilefni            	$error(AÐAF, af gefnu tilefni)
-að hinu leitinu					$error(YI, að hinu leytinu)
+að hinu leitinu					$error(IY, að hinu leytinu)
 að hjartans lyst            	$error(AÐAF, af hjartans lyst)
 að hvaða tilefni            	$error(AÐAF, af hvaða tilefni)
-að einhverju leiti              $error(YI, að einhverju leyti)
-að engu leiti               	$error(YI, að engu leyti)
-að þessu leiti               	$error(YI, að þessu leyti)
-að því leiti               		$error(YI, að því leyti)
-að mestu leiti					$error(YI, að mestu leyti)
-að mörgu leiti					$error(YI, að mörgu leyti)
-að miklu leiti              	$error(YI, að miklu leyti)
-að neinu leiti               	$error(YI, að neinu leyti)
-að verulegu leiti              	$error(YI, að verulegu leyti)
-að talsverðu leiti             	$error(YI, að talsverðu leyti)
-að öllu leiti               	$error(YI, að öllu leyti)
-að ýmsu leiti               	$error(YI, að ýmsu leyti)
-fyrir mitt leiti               	$error(YI, fyrir mitt leyti)
-fyrir okkar leiti               $error(YI, fyrir okkar leyti)
+að einhverju leiti              $error(IY, að einhverju leyti)
+að engu leiti               	$error(IY, að engu leyti)
+að þessu leiti               	$error(IY, að þessu leyti)
+að því leiti               		$error(IY, að því leyti)
+að mestu leiti					$error(IY, að mestu leyti)
+að mörgu leiti					$error(IY, að mörgu leyti)
+að miklu leiti              	$error(IY, að miklu leyti)
+að neinu leiti               	$error(IY, að neinu leyti)
+að verulegu leiti              	$error(IY, að verulegu leyti)
+að talsverðu leiti             	$error(IY, að talsverðu leyti)
+að öllu leiti               	$error(IY, að öllu leyti)
+að ýmsu leiti               	$error(IY, að ýmsu leyti)
+fyrir mitt leiti               	$error(IY, fyrir mitt leyti)
+fyrir okkar leiti               $error(IY, fyrir okkar leyti)
 að sjálfsdáðum              	$error(AÐAF, af sjálfsdáðum)
 að ásettu ráði              	$error(AÐAF, af ásettu ráði)
 að öllu afli                	$error(AÐAF, af öllu afli)
 að því tilefni              	$error(AÐAF, af því tilefni)
 að því tilskyldu            	$error(YI, að því tilskildu)
 beggja megin                	$error(WRONG_WORD, báðum megin) # eða beggja vegna
-björn í híði					$error(YI, björn í hýði)
+björn í híði					$error(IIYY, björn í hýði)
 blöðum um það að flétta         $error(WRONG_WORD, blöðum um það að fletta)
 burtséð frá                 	$error(WRONG_PHRASE, að undanskildu)  # eða án tillits til
-bæn sýna uppfyllta				$error(YI, bæn sína uppfyllta)
-drauma sýna rætast				$error(YI, drauma sína rætast)
+bæn sýna uppfyllta				$error(YYII, bæn sína uppfyllta)
+drauma sýna rætast				$error(YYII, drauma sína rætast)
 eiga þakkir skilið          	$error(WRONG_FORM, eiga þakkir skildar) # (mælt með)
 á þakkir skilið          	    $error(WRONG_FORM, á þakkir skildar) # (mælt með)
 átti þakkir skilið        	    $error(WRONG_FORM, átti þakkir skildar) # (mælt með)
 átt þakkir skilið        	    $error(WRONG_FORM, átt þakkir skildar) # (mælt með)
-eina ferðina en					$error(N, eina ferðina enn)
+eina ferðina en					$error(NN, eina ferðina enn)
 eins og helt sé úr fötu			$error(WRONG_WORD, eins og hellt sé úr fötu)
 eitthvað að viti            	$error(AÐAF, eitthvað af viti)
-ekki allt ömmu sýna				$error(YI, ekki allt ömmu sína)
-ekki eftir neinu að býða		$error(YI, ekki eftir neinu að bíða)
+ekki allt ömmu sýna				$error(YYII, ekki allt ömmu sína)
+ekki eftir neinu að býða		$error(YYII, ekki eftir neinu að bíða)
 ekki er öll nótt úti en			$error(N, ekki er öll nótt úti enn)
 # en einu sinni					$error(N, enn einu sinni)
 # en fremur						$error(N, enn fremur)
 en kvað það var gaman			$error(KHV, en hvað það var gaman)
-en og aftur						$error(N, enn og aftur)
-# en um sinn					$error(N, enn um sinn)
-# en á dögum					$error(N, enn á dögum)
-# en í dag						$error(N, enn í dag)
-en þann dag í dag				$error(N, enn þann dag í dag)
-en þá í dag						$error(N, enn þá í dag)
+en og aftur						$error(NN, enn og aftur)
+# en um sinn					$error(NN, enn um sinn)
+# en á dögum					$error(NN, enn á dögum)
+# en í dag						$error(NN, enn í dag)
+en þann dag í dag				$error(NN, enn þann dag í dag)
+en þá í dag						$error(NN, enn þá í dag)
 engu að síður               	$error(WRONG_WORD, eigi að síður)  # (mælt með)
 erlendis frá                	$error(WRONG_PHRASE, frá útlöndum)
 frá hvort öðru                  $error(WRONG_WORD, hvort frá öðru)
-fríður sínum					$error(YI, fríður sýnum)
-fótum sýnum forráð				$error(YI, fótum sínum forráð)
-gefur að líta               	$error(WRONG_WORD, getur að líta)
+fríður sínum					$error(IIYY, fríður sýnum)
+fótum sýnum forráð				$error(YYII, fótum sínum forráð)
+#gefur að líta               	$error(WRONG_WORD, getur að líta)
 hann vil                    	$error(WRONG_PERSON, hann vill)
 hún vil                    	    $error(WRONG_PERSON, hún vill)
 það vil                    	    $error(WRONG_PERSON, það vill)
@@ -4451,8 +4451,8 @@ helt úr skálum reiði			$error(WRONG_WORD, hellt úr skálum reiði)
 himininn byrgist				$error(WRONG_CASE, himinninn byrgist)
 himinn höndum tekið				$error(WRONG_CASE, himin höndum tekið)
 himinninn heiðir				$error(WRONG_CASE, himininn heiðir)
-hreint fyrir sýnum dyrum		$error(YI, hreint fyrir sínum dyrum)
-hvað á þetta að þíða			$error(YI, hvað á þetta að þýða)
+hreint fyrir sýnum dyrum		$error(YYII, hreint fyrir sínum dyrum)
+hvað á þetta að þíða			$error(IIYY, hvað á þetta að þýða)
 hvaðanæva að af landinu     	$error(REDUNDANT_WORD, hvaðanæva af landinu)
 í hann krappann                 $error(WRONG_WORD, í hann krappan)
 kom að fjöllum                  $error(AÐAF, kom af fjöllum)
@@ -4460,60 +4460,60 @@ komst að fjöllum                $error(AÐAF, komst af fjöllum)
 komu að fjöllum                 $error(AÐAF, komu af fjöllum)
 komuð að fjöllum                $error(AÐAF, komuð af fjöllum)
 komum að fjöllum                $error(AÐAF, komum af fjöllum)
-krók á götu sýna				$error(YI, krók á götu sína)
-kvað eftir annað				$error(KHV, hvað eftir annað)
-kvað hangir á spýtunni			$error(KHV, hvað hangir á spýtunni)
-kvað hékk á spýtunni			$error(KHV, hvað hékk á spýtunni)
-kvað klukkan slær				$error(KHV, hvað klukkan slær)
-kvað klukkan sló				$error(KHV, hvað klukkan sló)
-kvað ofan í annað				$error(KHV, hvað ofan í annað)
-kvað sem er						$error(KHV, hvað sem er)
-kvað sem tautar og raular		$error(KHV, hvað sem tautar og raular)
-kvað sem á bjátar				$error(KHV, hvað sem á bjátar)
-kvað sem á dynur				$error(KHV, hvað sem á dynur)
-kvað skal til bragðs taka		$error(KHV, hvað skal til bragðs taka)
-kvað til bragðs skal taka		$error(KHV, hvað til bragðs skal taka)
-kvað úr hverju					$error(KHV, hvað úr hverju)
-kver heilvita maður				$error(KHV, hver heilvita maður)
-kver með sínu nefi				$error(KHV, hver með sínu nefi)
-kver sem vettlingi getur valdið	$error(KHV, hver sem vettlingi getur valdið)
-kver veit nema					$error(KHV, hver veit nema)
+krók á götu sýna				$error(YYII, krók á götu sína)
+kvað eftir annað				$error(KVHV, hvað eftir annað)
+kvað hangir á spýtunni			$error(KVHV, hvað hangir á spýtunni)
+kvað hékk á spýtunni			$error(KVHV, hvað hékk á spýtunni)
+kvað klukkan slær				$error(KVHV, hvað klukkan slær)
+kvað klukkan sló				$error(KVHV, hvað klukkan sló)
+kvað ofan í annað				$error(KVHV, hvað ofan í annað)
+kvað sem er						$error(KVHV, hvað sem er)
+kvað sem tautar og raular		$error(KVHV, hvað sem tautar og raular)
+kvað sem á bjátar				$error(KVHV, hvað sem á bjátar)
+kvað sem á dynur				$error(KVHV, hvað sem á dynur)
+kvað skal til bragðs taka		$error(KVHV, hvað skal til bragðs taka)
+kvað til bragðs skal taka		$error(KVHV, hvað til bragðs skal taka)
+kvað úr hverju					$error(KVHV, hvað úr hverju)
+kver heilvita maður				$error(KVHV, hver heilvita maður)
+kver með sínu nefi				$error(KVHV, hver með sínu nefi)
+kver sem vettlingi getur valdið	$error(KVHV, hver sem vettlingi getur valdið)
+kver veit nema					$error(KVHV, hver veit nema)
 # The following doesn't work since 'kynferðislegt áreiti' can
 # be either nominative or accusative case, and since we don't know
 # at correction time which one it is, we can't substitute the correct declension
 # kynferðislegt áreiti			$error(WRONG_WORD, kynferðisleg áreitni)
-leifi frá störfum				$error(YI, leyfi frá störfum)
+leifi frá störfum				$error(IY, leyfi frá störfum)
 leiðir skyldi					$error(YI, leiðir skildi)
-lifandi líst					$error(YI, lifandi lýst)
-lifir en í glæðunum				$error(N, lifir enn í glæðunum)
-lykkju á leið sýna				$error(YI, lykkju á leið sína)
-líður og býður					$error(YI, líður og bíður)
-lýta aldrei glaðan dag			$error(YI, líta aldrei glaðan dag)
-lýta björtum augum				$error(YI, líta björtum augum)
-lýta hornauga					$error(YI, líta hornauga)
-lýta spurnaraugum				$error(YI, líta spurnaraugum)
-lýta um hæl						$error(YI, líta um hæl)
-lýta yfir farinn veg			$error(YI, líta yfir farinn veg)
-lýta á björtu hliðarnar			$error(YI, líta á björtu hliðarnar)
-lýta á klukkuna					$error(YI, líta á klukkuna)
-lýta í allar áttir				$error(YI, líta í allar áttir)
-lýta í eigin barm				$error(YI, líta í eigin barm)
-lýta í kringum					$error(YI, líta í kringum)
-lýti aldrei glaðan dag			$error(YI, líti aldrei glaðan dag)
-lýti björtum augum				$error(YI, líti björtum augum)
-lýti hornauga					$error(YI, líti hornauga)
-lýti spurnaraugum				$error(YI, líti spurnaraugum)
-lýti um hæl						$error(YI, líti um hæl)
-lýti yfir farinn veg			$error(YI, líti yfir farinn veg)
-lýti á björtu hliðarnar			$error(YI, líti á björtu hliðarnar)
-lýti á klukkuna					$error(YI, líti á klukkuna)
-lýti í allar áttir				$error(YI, líti í allar áttir)
-lýti í eigin barm				$error(YI, líti í eigin barm)
-lýti í kringum					$error(YI, líti í kringum)
+lifandi líst					$error(IIYY, lifandi lýst)
+lifir en í glæðunum				$error(NN, lifir enn í glæðunum)
+lykkju á leið sýna				$error(YYII, lykkju á leið sína)
+líður og býður					$error(YYII, líður og bíður)
+lýta aldrei glaðan dag			$error(YYII, líta aldrei glaðan dag)
+lýta björtum augum				$error(YYII, líta björtum augum)
+lýta hornauga					$error(YYII, líta hornauga)
+lýta spurnaraugum				$error(YYII, líta spurnaraugum)
+lýta um hæl						$error(YYII, líta um hæl)
+lýta yfir farinn veg			$error(YYII, líta yfir farinn veg)
+lýta á björtu hliðarnar			$error(YYII, líta á björtu hliðarnar)
+lýta á klukkuna					$error(YYII, líta á klukkuna)
+lýta í allar áttir				$error(YYII, líta í allar áttir)
+lýta í eigin barm				$error(YYII, líta í eigin barm)
+lýta í kringum					$error(YYII, líta í kringum)
+lýti aldrei glaðan dag			$error(YYII, líti aldrei glaðan dag)
+lýti björtum augum				$error(YYII, líti björtum augum)
+lýti hornauga					$error(YYII, líti hornauga)
+lýti spurnaraugum				$error(YYII, líti spurnaraugum)
+lýti um hæl						$error(YYII, líti um hæl)
+lýti yfir farinn veg			$error(YYII, líti yfir farinn veg)
+lýti á björtu hliðarnar			$error(YYII, líti á björtu hliðarnar)
+lýti á klukkuna					$error(YYII, líti á klukkuna)
+lýti í allar áttir				$error(YYII, líti í allar áttir)
+lýti í eigin barm				$error(YYII, líti í eigin barm)
+lýti í kringum					$error(YYII, líti í kringum)
 margra árabil					$error(WRONG_WORD, margra ára bil)
 meira og minna              	$error(WRONG_WORD, meira eða minna)
-með bestu list					$error(YI, með bestu lyst)
-með orðum líst					$error(YI, með orðum lýst)
+með bestu list					$error(IY, með bestu lyst)
+með orðum líst					$error(IIYY, með orðum lýst)
 með tillit til              	$error(WRONG_CASE, með tilliti til)
 mikið magn af               	$error(REDUNDANT_WORD, mikið af)    # also called pleonasm
 miklum mun meira            	$error(REDUNDANT_WORD, mun meira) 	# eða 'miklu meira'
@@ -4521,9 +4521,9 @@ mikil munur                     $error(WRONG_WORD, mikill munur)
 oft á tíðum                 	$error(WRONG_WORD, oft og tíðum)
 orði né eyði					$error(YI, orði né eiði)
 réttu megin                 	$error(WRONG_GENDER, réttum megin)
-skildi hundur heita				$error(YI, skyldi hundur heita)
-skini skroppin					$error(YI, skyni skroppin)
-skini skroppinn					$error(YI, skyni skroppinn)
+skildi hundur heita				$error(IY, skyldi hundur heita)
+skini skroppin					$error(IY, skyni skroppin)
+skini skroppinn					$error(IY, skyni skroppinn)
 # The following correction is in fond memory of
 # https://kjarninn.is/skyring/2020-05-15-thad-er-ekki-haegt-ad-meta-storf-folks-bara-med-stimpilklukkunni/
 skrattinn úr sauðalæknum        $error(WRONG_WORD, skrattinn úr sauðarleggnum)
@@ -4534,49 +4534,49 @@ skyldi ekki neitt				$error(YI, skildi ekki neitt)
 skyldi fyrr en skall í tönnum	$error(YI, skildi fyrr en skall í tönnum)
 skyldi ekki fyrr en skall í tönnum	$error(YI, skildi ekki fyrr en skall í tönnum)
 skyn og skúrir					$error(YI, skin og skúrir)
-sér og sýnum					$error(YI, sér og sínum)
-sýna hentisemi					$error(YI, sína hentisemi)
-sýnum eigin augum				$error(YI, sínum eigin augum)
+sér og sýnum					$error(YYII, sér og sínum)
+sýna hentisemi					$error(YYII, sína hentisemi)
+sýnum eigin augum				$error(YYII, sínum eigin augum)
 talandi um                  	$error(WRONG_PHRASE, fyrst rætt er um) # eða úr því að talið berst að   -- enskusletta
 til margra ára              	$error(WRONG_PHRASE, í mörg ár)
-um sama leiti					$error(YI, um sama leyti)
-um það leiti					$error(YI, um það leyti)
-um þetta leiti					$error(YI, um þetta leyti)
+um sama leiti					$error(IY, um sama leyti)
+um það leiti					$error(IY, um það leyti)
+um þetta leiti					$error(IY, um þetta leyti)
 undir beran himinn				$error(WRONG_CASE, undir beran himin)
 utan að landi               	$error(AÐAF, utan af landi)
-verða vitni af					$error(AÐAF, verða vitni að)
-varð vitni af					$error(AÐAF, varð vitni að)
-vilja sýnum framgengt			$error(YI, vilja sínum framgengt)
-við líði                    	$error(YI, við lýði)
+verða vitni af					$error(AFAÐ, verða vitni að)
+varð vitni af					$error(AFAÐ, varð vitni að)
+vilja sýnum framgengt			$error(YYII, vilja sínum framgengt)
+við líði                    	$error(IIYY, við lýði)
 á morgnanna                 	$error(N, á morgnana)
 á næsta leyti					$error(YI, á næsta leiti)
-á sýnum tíma					$error(YI, á sínum tíma)
+á sýnum tíma					$error(YYII, á sínum tíma)
 á vetfangi                  	$error(WRONG_WORD, á vettvangi)
 ég vill                     	$error(WRONG_PERSON, ég vil)
 í auknu mæli                	$error(WRONG_GENDER, í auknum mæli)
 í einhverju mæli            	$error(WRONG_GENDER, í einhverjum mæli)
 í einu vettvangi            	$error(WRONG_WORD, í einu vetfangi)
-í eiði							$error(YI, í eyði)
+í eiði							$error(IY, í eyði)
 í fleira en eitt skipti     	$error(WRONG_FORM, í fleiri en eitt skipti)
-í hægðum sýnum					$error(YI, í hægðum sínum)
-í mestu kviðunum				$error(KHV, í mestu hviðunum)
+í hægðum sýnum					$error(YYII, í hægðum sínum)
+í mestu kviðunum				$error(HVKV, í mestu hviðunum)
 í rénum                     	$error(WRONG_WORD, í rénun)
 í staðin                    	$error(WRONG_WORD, í staðinn)
 í takt við                  	$error(WRONG_CASE, í takti við)
 í tilefni að                    $error(AÐAF, í tilefni af)
-í því skini						$error(YI, í því skyni)
-ítrustu varúðar             	$error(YI, ýtrustu varúðar)
+í því skini						$error(IY, í því skyni)
+ítrustu varúðar             	$error(IIYY, ýtrustu varúðar)
 ýmis konar                      $error(WRONG_WORD, ýmiss konar)
-ósk sýna uppfyllta       		$error(YI, ósk sína uppfyllta)
+ósk sýna uppfyllta       		$error(YYII, ósk sína uppfyllta)
 öðru hvoru megin            	$error(WRONG_GENDER, öðrum hvorum megin)
 öðruhvoru megin             	$error(WRONG_GENDER, öðrum hvorum megin)
 öndverðu meiði					$error(WRONG_WORD, öndverðum meiði)
 öll sömul						$error(WRONG_WORD, öllsömul)
 öll sömun						$error(WRONG_WORD, öllsömul)
-þar til yfir líkur				$error(YI, þar til yfir lýkur)
+þar til yfir líkur				$error(IIYY, þar til yfir lýkur)
 þessi aðilar                    $error(WRONG_FORM, þessir aðilar)
-þíðir ekkert að					$error(YI, þýðir ekkert að)
-þýða í ísinn					$error(YI, þíða í ísinn)
+þíðir ekkert að					$error(IIYY, þýðir ekkert að)
+þýða í ísinn					$error(IIYY, þíða í ísinn)
 þessar stundirnar               $error(WRONG_NUMBER, þessa stundina)
 að sjálfu sér 					$error(AÐAF, af sjálfu sér)
 
