--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4661,6 +4661,7 @@ við líði                    	$error(IIYY, við lýði)
 þýða í ísinn					$error(IIYY, þíða í ísinn)
 þessar stundirnar               $error(WRONG_NUMBER, þessa stundina)
 að sjálfu sér 					$error(AÐAF, af sjálfu sér)
+þar að leiðandi					$error(AÐAF, þar af leiðandi)
 
 # Include WrongWords.conf file
 
