Error grammar rule handling polished; patterns added for specific types of subject case errors

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,12 @@ test/spantest.py
 # Error analysis
 eval/examples_iEC/
 
+# Extra resources
+src/reynir_correct/resources/*.csv
+src/reynir_correct/resources/*.py
+src/reynir_correct/resources/*.txt
+src/reynir_correct/resources/*/*.csv
+
 # Symlink to iceErrorCorpus for evaluation
 eval/iceErrorCorpus
 
