removed capitalized words that exist in BÍN

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3643,7 +3643,7 @@ Islam
 Íslam
 # Gyðingur 		# can also be lower-case, so maybe not include this 
 Helvíti
-Himnaríki
+# Himnaríki		# Proper name Himnaríki in BÍN
 Kaþólska
 # Kristni # !!! Rekst á mannsnafnið 'Kristinn' í þgf.
 Kristindómur
@@ -3666,12 +3666,12 @@ Marxismi
 Darwinismi
 Heimsstyrjöld	# Fyrri/Seinni/Síðari Heimsstyrjöld
 Stríð 			# Kalda Stríðið
-Heimsveldi
+# Heimsveldi	# Proper name Heimsveldi in BÍN
 Bylting
-Uppreisn
+# Uppreisn		# Proper name Uppreisn in BÍN
 meistaradeild
 # Kreppa  # Maybe 'Kreppan' but not general 'kreppa'!
-Endurreisn
+# Endurreisn	# Proper name Endurreisn in BÍN
 Jörð
 Tungl
 óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
@@ -3704,7 +3704,7 @@ Sjómannadagur
 Þjóðhátíðardagur
 Verslunarmannahelgi
 Gleðiganga
-Menningarnótt
+# Menningarnótt		# Proper name Menningarnótt in BÍN
 Hrekkjavaka
 Feðradagur
 Fullveldisdagur
@@ -3712,7 +3712,7 @@ Jól
 Aðfangadagur
 Aðfangadagskvöld
 Jóladagur
-Áramót
+# Áramót 		# Proper name Áramót in BÍN
 Gamlársdagur
 jónsmessa
 valentínusardagur
@@ -3756,12 +3756,12 @@ Hreppstjóri
 Séra    
 Herra
 Frú
-Biskup
+#Biskup	## Biskup in BÍN as place name
 Borgarstjóri
 Doktor
 Hæstaréttardómari
 # Landlæknir
-Prestur
+# Prestur	# Place name Prestur in BÍN
 Prófessor
 # Sýslumaður
 # Lögreglustjóri
@@ -3785,7 +3785,7 @@ Sunnudagur
 
 Eðlisfræði
 Efnafræði
-Félagsfræði
+# Félagsfræði	# Proper name Félagsfræði in BÍN
 Hagfræði
 Íþrótt
 Jarðfræði
@@ -3829,7 +3829,7 @@ Grunnskóli
 Íslenska
 danmörk
 dani
-Danskur
+#Danskur	## The noun Danskur listed in BÍN, would have to be corrected after parsing
 Danska
 noregur
 norðmaður
@@ -4169,7 +4169,7 @@ Maríudepla
 Maríuerla
 Maríuhæna
 Mývatnssilungur
-Nýfundnalandshundur
+# Nýfundnalandshundur	# Proper name Nýfundnalandshundur in BÍN
 Óðinshani
 Pýreneahundur
 rottweiler-hundur
@@ -4198,12 +4198,12 @@ Engjamaríustakkur
 Fjallakobbi
 Freyjubrá
 Friggjargras
-Gullauga
+# Gullauga		# Proper name Gullauga in BÍN
 Gullbrá
 Hvítárlax
 Ingimarsfífill
 Íslandsfífill
-Jakobsfífill
+# Jakobsfífill	# Proper name Jakobsfífill in BÍN
 Jakobsstigi 
 Lokasjóður
 Maríugrös
@@ -4281,7 +4281,7 @@ Vínarterta
 Akureyrarveiki
 Alzheimers
 Alzheimers-Sjúkdómur
-Asíuflensa
+# Asíuflensa	## BÍN lists both Asíuflensa and asíuflensa
 Downs
 # Downs-heilkenni
 Fuglaflensa
@@ -4289,7 +4289,7 @@ Hermannaveiki
 Inflúensa
 Langerhanseyja
 Liðagigt
-Parkinsonsveiki
+# Parkinsonsveiki	# Proper name Parkinsonsveiki in BÍN
 Stokkhólmsheilkenni
 Sóríasis
 
@@ -4341,7 +4341,7 @@ Bögubósi
 Dísilbifreið
 Evuklæði
 Gordíonshnútur
-Grettistak
+# Grettistak	# Proper name Grettistak in BÍN
 Gróusaga
 Hrunadans
 Kaupahéðinn
@@ -4381,7 +4381,7 @@ Kaþólskur
 Konungsríki
 # Kristinn		# Also name!
 Landsfundur
-Landsþing
+# Landsþing		# Proper name Landsþing in BÍN
 Leiðtogi
 Ljósmóðir
 Lóuþræll
@@ -4392,7 +4392,7 @@ Lýðveldi
 Markaðsstjóri
 Musterisriddari
 Málabraut
-Múmínálfur
+Múmínálfur		# 'Múmínálfur' (hástafur) virðist vera í GreynirBin
 Nasisti
 Neyðarbraut
 Páskauppreisn
