removed words with upper- and lowercase version in BÍN

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3670,7 +3670,7 @@ Stríð 			# Kalda Stríðið
 Bylting
 # Uppreisn		# Proper name Uppreisn in BÍN
 meistaradeild
-# Kreppa  # Maybe 'Kreppan' but not general 'kreppa'!
+# Kreppa  		# Proper name Kreppa in BÍN
 # Endurreisn	# Proper name Endurreisn in BÍN
 Jörð
 Tungl
@@ -3840,7 +3840,7 @@ svíi
 Sænskur
 Sænska
 finnland
-finni
+# finni 	# Proper name Finnur
 Finnskur
 Finnska
 kína
@@ -3928,7 +3928,7 @@ Belgíska
 Ítalskur
 Ítalska
 írland
-íri
+# íri 		# Noun íri in BÍN
 Írskur
 Írska
 skotland
@@ -4166,7 +4166,7 @@ Kolkuóshross
 Labradorhundur
 Maríubjalla
 Maríudepla
-Maríuerla
+# Maríuerla 			# Proper name Maríuerla in BÍN
 Maríuhæna
 Mývatnssilungur
 # Nýfundnalandshundur	# Proper name Nýfundnalandshundur in BÍN
@@ -4190,7 +4190,7 @@ Alaskalúpína
 Alaskavíðir
 Alaskaösp
 Aronsvöndur
-Baldursbrá
+# Baldursbrá		# Proper name Baldursbrá in BÍN
 Brekkumaríustakkur
 Davíðslykill
 Dvergsóley
@@ -4199,7 +4199,7 @@ Fjallakobbi
 Freyjubrá
 Friggjargras
 # Gullauga		# Proper name Gullauga in BÍN
-Gullbrá
+# Gullbrá		# Proper name Gullbrá in BÍN
 Hvítárlax
 Ingimarsfífill
 Íslandsfífill
