added new ministers

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3669,7 +3669,6 @@ Stríð 			# Kalda Stríðið
 # Heimsveldi	# Proper name Heimsveldi in BÍN
 Bylting
 # Uppreisn		# Proper name Uppreisn in BÍN
-meistaradeild
 # Kreppa  		# Proper name Kreppa in BÍN
 # Endurreisn	# Proper name Endurreisn in BÍN
 Jörð
@@ -3736,6 +3735,14 @@ Menningarmálaráðherra
 Samgönguráðherra
 Sveitarstjórnarráðherra
 Heilbrigðisráðherra
+Varnamálaráðherra
+Iðnaðarráðherra
+Nýsköpunarráðherra
+Loftslagsráðherra
+Innanríkisráðherra
+Ferðamálaráðherra
+Viðskiptaráðherra
+Innviðaráðherra
 Félags- og barnamálaráðherra
 Umhverfis- og auðlindaráðherra
 Fjármála- og efnahagsráðherra
