--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3735,7 +3735,7 @@ Menningarmálaráðherra
 Samgönguráðherra
 Sveitarstjórnarráðherra
 Heilbrigðisráðherra
-Varnamálaráðherra
+Varnarmálaráðherra
 Iðnaðarráðherra
 Nýsköpunarráðherra
 Loftslagsráðherra
