minor comment fix

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4122,7 +4122,7 @@ suðvesturkjördæmi
 reykjavíkurkjördæmi
 
 # Language families
-# Unable to include: aímarískur, algískur, ástronesískur, dravidískur, suðurkákasískur
+# Unable to include: aímarískur, algískur, ástronesískur, dravidískur
 
 Indóevrópskur
 Semískur
@@ -4399,7 +4399,7 @@ Lýðveldi
 Markaðsstjóri
 Musterisriddari
 Málabraut
-Múmínálfur		# 'Múmínálfur' (hástafur) virðist vera í GreynirBin
+Múmínálfur
 Nasisti
 Neyðarbraut
 Páskauppreisn
