minor fix in config

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3645,7 +3645,7 @@ Islam
 Helvíti
 # Himnaríki		# Proper name Himnaríki in BÍN
 Kaþólska
-# Kristni # !!! Rekst á mannsnafnið 'Kristinn' í þgf.
+# Kristni 		# Proper name 'Kristinn'
 Kristindómur
 Mótmælendatrú
 Múhameðstrú
@@ -3673,7 +3673,7 @@ Bylting
 # Endurreisn	# Proper name Endurreisn in BÍN
 Jörð
 Tungl
-óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
+óskarsverðlaun
 internet
 litla-hraun
 ólympíuleikar
