new words from BÍN added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3674,7 +3674,6 @@ Bylting
 Jörð
 Tungl
 óskarsverðlaun
-internet
 litla-hraun
 ólympíuleikar
 sumarólympíuleikar
@@ -4005,14 +4004,14 @@ Pakistanskur
 víetnam
 víetnami
 Víetnamskur
-# Víetnamska
+Víetnamska	
 mongólía
 mongólíumaður
 Mongólskur
 indónesía
 indónesi
 Indónesískur
-# Indónesíska  # Not in BÍN
+Indónesíska  
 kórea
 kóreumaður
 Kóreskur
@@ -4062,21 +4061,21 @@ fríslendingur
 Frísneskur
 ameríka
 Amerískur
-#Afrísk-amerískur  # Not in BÍN
+Afrísk-amerískur  
 líbía
 Líbískur
 karíbahaf
-#karíbi 	# Not in BÍN
-#Karíbskur 	# Not in BÍN
+karíbi 
+Karíbskur 	
 Karabískur
 evrópa
 evrópubúi
 Evrópskur
 austur-evrópa
-#austur-evrópubúi 	# Not corrected, not in BÍN
+austur-evrópubúi 	
 Austurevrópskur
 vestur-evrópa
-#vestur-evrópubúi 	# Not corrected, not in BÍN
+vestur-evrópubúi 
 Vesturevrópskur
 norður-evrópa
 suður-evrópa
