Ritmyndir handling updated; detailed descriptions added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4358,8 +4358,6 @@ Svikahrappur
 Ökuþór
 
 # Other terms
-
-
 Alþjóðabraut
 Borgaryfirvöld
 Bossi
@@ -4419,10 +4417,149 @@ Vistfræðikenning
 Þjóðfræði
 Þrælastríð
 
+[ritmyndir]
+$include Storasnid_ritm.csv
+
+[ritmyndir_details]
+# The following categories are retrieved from the Ritmyndir data,
+# see https://bin.arnastofnun.is/gogn/storasnid/ritmyndir/
+# for the other information
+# "Ritmyndir error code" : ("ritregla/spelling rule", "category", "other detail" ) }
+# Other detail can contain {} for fstring insertion - values are {orig} and {correct}
+"1ORD42": "2.4.1", "Stafsetningarvilla", ""
+"2ORD41": "2.1.2", "Stafsetningarvilla", ""
+"ANDA4ENDA": "", "Beygingarvilla", ""
+"ARI4NI": "", "Beygingarvilla", ""
+"ASLAUKABRODD": "", "Ásláttarvilla", ""
+"ASLAUKASTAF": "", "Ásláttarvilla", ""
+"ASLBRODDVANTAR": "", "Ásláttarvilla", ""
+"ASLSTAFVANTAR": "", "Ásláttarvilla", ""
+"ASLVITLSTAF": "", "Ásláttarvilla", ""
+"ASLVIXL": "", "Ásláttarvilla", ""
+"ASLVIXLBRODD": "", "Ásláttarvilla", ""
+"AUKAG": "", "Stafsetningarvilla", ""
+"AUKAJ": "", "Stafsetningarvilla", ""
+"AUKARÞFFT": "", "Beygingarvilla", ""
+"B4P": "", "Stafsetningarvilla", ""
+"BAND-OF": "26.1", "Stafsetningarvilla", ""
+"BAND-VANT": "26.1.2", "Stafsetningarvilla", ""
+"BEYGSJALD": "", "Beygingarvilla", ""
+"BEYGVILLA": "", "Beygingarvilla", ""
+"CE4CJE": "", "Stafsetningarvilla", ""
+"CJE4CE": "", "Stafsetningarvilla", ""
+"CÉ4CE": "3.4", "Stafsetningarvilla", ""
+"DN4NN": "16.2", "Stafsetningarvilla", ""
+"E4EI": "5", "Stafsetningarvilla", ""
+"EBEYG": "", "Beygingarvilla", ""
+"EFINGU": "", "Beygingarvilla", ""
+"EI4E": "5", "Stafsetningarvilla", ""
+"EI4EY": "6.2.3, 6.4", "Stafsetningarvilla", ""
+"EKKIORD": "", "Beygingarvilla", "Eitthvað bendir til þess að málnotandi mistúlki ákveðið orð eða ruglist, t.d. samsett orð þar sem fyrri hluti orðs hefur verið misskilinn",
+"ETVILLA": "", "Beygingarvilla", "Eintölumynd orðs sem venjulega er aðeins haft í fleirtölu"
+"EY4EI": "6.2.3, 6.4", "Stafsetningarvilla", ""
+"F4FF": "7.3.4", "Stafsetningarvilla", ""
+"F4V": "7.1-7.3.5", "Stafsetningarvilla", ""
+"FS4PS": "13.2", "Stafsetningarvilla", ""
+"FT4PT": "13.3.1", "Stafsetningarvilla", ""
+"FTVILLA": "", "Beygingarvilla", "Fleirtölumynd orðs sem venjulega er aðeins haft í eintölu"
+"G4J": "8", "Stafsetningarvilla", ""
+"G4K": "", "Stafsetningarvilla", ""
+"GGÐ4GÐ": "18", "Stafsetningarvilla", ""
+"GL4GGL": "18", "Stafsetningarvilla", ""
+"GMVILLA": "", "Beygingarvilla", "Hugsanleg germynd sagnar sem venjulega er aðeins höfð í miðmynd"
+"GN4GGN": "18", "Stafsetningarvilla", ""
+"GN4NG": "8.3, 20", "Stafsetningarvilla", ""
+"GST4GGST": "18", "Stafsetningarvilla", ""
+"GV4GGV": "18", "Stafsetningarvilla", ""
+"GVANTAR": "8", "Stafsetningarvilla", ""
+"GÐ4GGÐ": "18", "Stafsetningarvilla", ""
+"HA4LAG": "1.3.2 f", "Stafsetningarvilla", ""
+"HK4KVK": "", "Beygingarvilla", ""
+"HV4KV": "", "Beygingarvilla", ""
+"I4Y": "6.2.1, 6.3, 6.4", "Stafsetningarvilla", ""
+"I4Í": "", "Stafsetningarvilla", ""
+"J4G": "8", "Stafsetningarvilla", ""
+"J4GJ": "8.2.2", "Stafsetningarvilla", ""
+"JE4É": "3.2", "Stafsetningarvilla", ""
+"JVANTAR": "10", "Stafsetningarvilla", ""
+"JÉ4JE": "3.3.2", "Stafsetningarvilla", ""
+"KKN4KN": "18", "Stafsetningarvilla", ""
+"KKT4KT": "18", "Stafsetningarvilla", ""
+"KN4KKN": "18", "Stafsetningarvilla", ""
+"KT4GT": "", "Stafsetningarvilla", ""
+"KT4KKT": "18", "Stafsetningarvilla", ""
+"KV4HV": "9.1", "Stafsetningarvilla", ""
+"KV4HV-FNSP": "9.2", "Beygingarvilla", ""
+"KVK4HK": "", "Beygingarvilla", ""
+"KVK4KK": "", "Beygingarvilla", ""
+"LAG4HA": "1.2.2", "Stafsetningarvilla", ""
+"LG4GL": "8.3, 20", "Stafsetningarvilla", ""
+"LLJ4LJ": "18", "Stafsetningarvilla", ""
+"LLST4LST": "18", "Stafsetningarvilla", ""
+"LLT4LT": "18", "Stafsetningarvilla", ""
+"LS4LLS": "18", "Stafsetningarvilla", ""
+"LST4LLST": "18", "Stafsetningarvilla", ""
+"LT4LLT": "18", "Stafsetningarvilla", ""
+"M4FN": "7.6", "Stafsetningarvilla", ""
+"M4MM": "11", "Stafsetningarvilla", ""
+"MIÐSTIGV": "", "Beygingarvilla", "Ritmynd er beygingarmynd í miðstigi af lýsingarorði sem venjulega stigbreytist ekki eða er venjulega ekki haft í miðstigi"
+"MM4M": "11", "Stafsetningarvilla", ""
+"N4NN-END": "12", "Stafsetningarvilla", ""
+"N4NN-ORD": "18", "Stafsetningarvilla", ""
+"N4NN-SAM": "", "Stafsetningarvilla", ""
+"NG4GN": "8.3, 20", "Stafsetningarvilla", ""
+"NGNK": "4.2", "Stafsetningarvilla", ""
+"NN4N-END": "12", "Stafsetningarvilla", ""
+"NN4N-ORD": "18", "Stafsetningarvilla", ""
+"NN4N-SAM": "", "Stafsetningarvilla", ""
+"O4Ó": "", "Stafsetningarvilla", ""
+"O4Ó-NGNK": "4.3", "Stafsetningarvilla", ""
+"OF-U": "", "Stafsetningarvilla", ""
+"P4B": "", "Stafsetningarvilla", ""
+"P4Þ": "", "Stafsetningarvilla", "P ritað fyrir Þ, vantar íslenska stafi"
+"PL4FL": "7.5", "Stafsetningarvilla", ""
+"PPL4PL": "18", "Stafsetningarvilla", ""
+"PPN4PN": "18", "Stafsetningarvilla", ""
+"PS4PPS": "18", "Stafsetningarvilla", ""
+"PT4PPT": "13.3.1", "Stafsetningarvilla", ""
+"R4RR": "14", "Stafsetningarvilla", ""
+"RFTGR": "", "Beygingarvilla", "r sem ekki heyrist alltaf í framburði í endingu fleirtölu með greini í nefnifalli og þolfalli kvk er sleppt í ritmynd."
+"RN4RFN": "19", "Stafsetningarvilla", ""
+"RN4RÐN": "19", "Stafsetningarvilla", ""
+"RR4R": "14", "Stafsetningarvilla", ""
+"RS4RFS": "19", "Stafsetningarvilla", ""
+"SAMS-V": "", "Beygingarvilla", "Samsetning orðs er ekki eins og venja er, t.d. þegar fyrri hluti orðs er venjulega í eignarfalli eintölu en í eignarfalli fleirtölu í ritmyndinni."
+"SK4STK": "19", "Stafsetningarvilla", ""
+"SKSTV": "1.2.5.2, 26.1.1", "Stafsetningarvilla", "Hluti orðsins er skammstöfun og í þeirri skammstöfun er villa. "
+"SL4RSL": "19", "Stafsetningarvilla", ""
+"SN-TALA-GR": "", "Stafsetningarvilla", ""
+"SPMYNDV": "", "Beygingarvilla", "Villa í spurnarmynd sagnar"
+"SST4ST": "15", "Stafsetningarvilla", ""
+"ST4RST": "19", "Stafsetningarvilla", ""
+"ST4SKT": "19", "Stafsetningarvilla", ""
+"STAFAGERD": "", "Ásláttarvilla", "Vantar íslenska stafi: ð, þ, ö, æ o.s.frv. eða röng gerð af stöfum t.d. đ fyrir ð"
+"STAFS-ERL": "", "Stafsetningarvilla", ""
+"STAFSVVIXL": "", "Stafsetningarvilla", ""
+"STK4SK": "19", "Stafsetningarvilla", ""
+"STN4SN": "19", "Stafsetningarvilla", ""
+"T4TT": "18", "Stafsetningarvilla", ""
+"TOKV": "", "Stafsetningarvilla", "Umritun tökuorðsins '{orig}' er ekki í samræmi við Stafsetningarorðabók, það á að ritast '{correct}'."
+"TTN4TN": "18", "Stafsetningarvilla", ""
+"U4Y": "", "Stafsetningarvilla", "Rétt er að rita y en framburður er oft u"
+"U4Ú": "", "Stafsetningarvilla", ""
+"V4F": "7.1-7.3.5", "Stafsetningarvilla", ""
+"VANTAR-J-FT": "", "Beygingarvilla", ""
+"Y4I": "6.2.1, 6.3, 6.4", "Stafsetningarvilla", ""
+"Z4S": "", "Stafsetningarvilla", "Úrelt stafsetning"
+"É4JE": "3.3.2", "Stafsetningarvilla", ""
+"Í4I": "", "Stafsetningarvilla", ""
+"Í4Ý": "6.2.2, 6.4", "Stafsetningarvilla", ""
+"Ý4Y": "", "Stafsetningarvilla", ""
+"Ý4Í": "6.2.2, 6.4", "Stafsetningarvilla", ""
+
 [taboo_words]
 
 $include TabooWords.conf
-
 
 [suggestions]
 
