Ritmyndir data and credit added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4418,6 +4418,8 @@ Vistfræðikenning
 Þrælastríð
 
 [ritmyndir]
+# The csv file is retrieved from https://bin.arnastofnun.is/gogn/mimisbrunnur/
+# as a part of Storasnid_allt.zip and needs to be in the config folder.
 $include Storasnid_ritm.csv
 
 [ritmyndir_details]
