Evaluation suite ready for error correction

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4565,6 +4565,7 @@ $include Storasnid_ritm.csv
 "Í4Ý": "6.2.2, 6.4", "Stafsetningarvilla", "Rita ætti 'ý' í stað 'í' í '{original}', svo: '{correct}'."
 "Ý4Y": "", "Stafsetningarvilla", "Rita ætti 'y' í stað 'ý' í '{original}', svo: '{correct}'."
 "Ý4Í": "6.2.2, 6.4", "Stafsetningarvilla", "Rita ætti 'í' í stað 'ý' í '{original}', svo: '{correct}'."
+"VILLA": "", "Stafsetningarvilla", "Rita ætti '{correct}' í stað '{original}'."
 
 [taboo_words]
 
