--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4551,6 +4551,8 @@ $include Storasnid_ritm.csv
 "STAFSVVIXL": "", "Stafsetningarvilla", "Hér hafa sérhljóð og samhljóð víxlast í stafsetningu, rita ætti '{original}' sem '{correct}'."
 "STK4SK": "19", "Stafsetningarvilla", "Rita ætti 'sk' í stað 'stk' í '{original}', svo: '{correct}'."
 "STN4SN": "19", "Stafsetningarvilla", "Rita ætti 'sn' í stað 'stn' í '{original}', svo: '{correct}'."
+"S4AR-EF": "", "Stafsetningarvilla", "Eignarfallsending karlkynsnafnorðsins '{original}' á að vera -(j)ar/-arins í stað -s/-sins, svo: '{correct}'."
+"S-EFGR": "", "Stafsetningarvilla", "-s- vantar á undan greini í eignarfallsendingu nafnorðsins '{original}', sem rita ætti svo: '{correct}'."
 "T4TT": "18", "Stafsetningarvilla", "Rita ætti 'tt' í stað 't' í '{original}', svo: '{correct}'."
 "TOKV": "", "Stafsetningarvilla", "Umritun tökuorðsins '{original}' er ekki í samræmi við Stafsetningarorðabók, það á að ritast '{correct}'."
 "TTN4TN": "18", "Stafsetningarvilla", "Rita ætti 'tn' í stað 'ttn' í '{original}', svo: '{correct}'."
