IEC nonwords added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4423,6 +4423,16 @@ Vistfræðikenning
 Þjóðfræði
 Þrælastríð
 
+# The tsv file is retrieved from http://hdl.handle.net/20.500.12537/63
+# and needs to be in the config folder.
+[iec_nonwords]
+$include IEC_nonwords.tsv
+
+# The tsv file is retrieved from http://hdl.handle.net/20.500.12537/78
+# and needs to be in the config folder
+[icesquer]
+$include IceSQuErVersion01.tsv
+
 [ritmyndir]
 # The csv file is retrieved from https://bin.arnastofnun.is/gogn/mimisbrunnur/
 # as a part of Storasnid_allt.zip and needs to be in the config folder.
