--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4468,6 +4468,7 @@ $include Storasnid_ritm.csv
 "CJE4CE": "", "Stafsetningarvilla", "Ekki á að skrifa 'gje' í '{original}' heldur 'ge', svo: '{correct}'."
 "CÉ4CE": "3.4", "Stafsetningarvilla", "Ekki á að skrifa gé/ké í '{original}' heldur ge/ke, svo: '{correct}'."
 "DN4NN": "16.2", "Stafsetningarvilla", "Þó að d-hljóð heyrist í framburðinum birtist það ekki í stafsetningu orðsins '{original}', heldur á það að vera '{correct}'."
+"DR4INN-LO": "", "Beygingarvilla", "Lýsingarorðið '{original}' ætti að beygjast svo: '{correct}'."
 "E4EI": "5", "Stafsetningarvilla", "Rita ætti 'ei' í stað 'e' í '{original}', svo: '{correct}'."
 "EBEYG": "", "Beygingarvilla", "Beygingarmyndin '{original}' er eldri, ákjósanlegra er að rita '{correct}'"
 "EFINGU": "", "Beygingarvilla", "Eignarfallsending kvenkynsorða sem enda á -ing eiga að vera -u/-unnar."
@@ -4495,6 +4496,7 @@ $include Storasnid_ritm.csv
 "HA4LAG": "1.3.2 f", "Stafsetningarvilla", "Rétt er að rita '{original}' með litlum staf, svo: '{correct}'."
 "HK4KVK": "", "Beygingarvilla", "Orðið '{lemma}' er kvenkynsnafnorð svo orðmyndin '{original}' ætti að ritast '{correct}'."
 "HV4KV": "", "Beygingarvilla", "Rita ætti 'kv' í stað 'hv' í orðmyndinni '{original}', þó að munur heyrist ekki í framburði margra, svo: '{correct}'."
+"I40-ÞGF": "", "Beygingarvilla", "Ekki skal rita -i- í þágufalli eintölu nafnorðsins '{lemma}'."
 "I4Y": "6.2.1, 6.3, 6.4", "Stafsetningarvilla", "Rita ætti 'y' í stað 'i' í '{original}', svo: '{correct}'."
 "I4Í": "", "Stafsetningarvilla", "Rita ætti 'í' í stað 'i' í '{original}', svo: '{correct}'."
 "J4G": "8", "Stafsetningarvilla", "Rita ætti 'g' í stað 'j' í '{original}', svo: '{correct}'."
