Atlandshafs added to wrong formers; pylance fixes; textplustoks output removed as it is unneccessary

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -243,6 +243,7 @@
 "Atlandshafi", "Atlantshafi"
 "Atlandshafsbandalagið", "Atlantshafsbandalagið"
 "Atlandshafsbandalagsins", "Atlantshafsbandalagsins"
+"Atlandshafsbandalangsins", "Atlantshafsbandalagsins"
 "atvæði", "atkvæði"
 "atvinnuli", "atvinnulið"
 "atvinnustarfssemi", "atvinnustarfsemi"
