Minor review changes

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -242,6 +242,7 @@
 "átjanda", "átjánda"
 "Atlandshafi", "Atlantshafi"
 "Atlandshafsbandalagið", "Atlantshafsbandalagið"
+"Atlandshafsbandalaginu", "Atlantshafsbandalaginu"
 "Atlandshafsbandalagsins", "Atlantshafsbandalagsins"
 "Atlandshafsbandalangsins", "Atlantshafsbandalagsins"
 "atvæði", "atkvæði"
